--- a/RDD e DataFrame/Operações_Básicas_com_o_Spark_(RDD_e_DataFrame).ipynb
+++ b/RDD e DataFrame/Operações_Básicas_com_o_Spark_(RDD_e_DataFrame).ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -927,10 +926,380 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##13 exemplos práticos de Transformações"
+      ],
+      "metadata": {
+        "id": "vuQoWXkYGrQp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import col"
+      ],
+      "metadata": {
+        "id": "91pm_UJTE4Eu"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark = SparkSession.builder     .appName(\"Exemplos PySpark\")     .getOrCreate()\n",
+        "\n",
+        "\n",
+        "# Carregar dados de um arquivo CSV\n",
+        "df = spark.read.csv(\"/content/cereal.csv\", header=True, inferSchema=True)\n",
+        "\n",
+        "# Exibir o schema do DataFrame\n",
+        "df.printSchema()\n",
+        "\n",
+        "# Selecionar colunas específicas\n",
+        "df_selected = df.select(\"mfr\", \"type\")\n",
+        "\n",
+        "# Filtrar registros com base em uma condição\n",
+        "df_filtered = df.filter(col(\"calories\") > 100)\n",
+        "\n",
+        "# Adicionar uma nova coluna calculada\n",
+        "df_with_new_column = df.withColumn(\"nova_coluna\", col(\"fat\") * 2)\n",
+        "\n",
+        "# Renomear uma coluna\n",
+        "df_renamed_column = df_with_new_column.withColumnRenamed(\"nova_coluna\", \"double_fat\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tRjEir_sG1DO",
+        "outputId": "60ffe8f2-a26c-4bb7-f707-95cd1f388b5f"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- name: string (nullable = true)\n",
+            " |-- mfr: string (nullable = true)\n",
+            " |-- type: string (nullable = true)\n",
+            " |-- calories: integer (nullable = true)\n",
+            " |-- protein: integer (nullable = true)\n",
+            " |-- fat: integer (nullable = true)\n",
+            " |-- sodium: integer (nullable = true)\n",
+            " |-- fiber: double (nullable = true)\n",
+            " |-- carbo: double (nullable = true)\n",
+            " |-- sugars: integer (nullable = true)\n",
+            " |-- potass: integer (nullable = true)\n",
+            " |-- vitamins: integer (nullable = true)\n",
+            " |-- shelf: integer (nullable = true)\n",
+            " |-- weight: double (nullable = true)\n",
+            " |-- cups: double (nullable = true)\n",
+            " |-- rating: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_selected.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JPwFwHddHfrG",
+        "outputId": "7ce25e83-d183-4a8a-f842-8feaa98f4ce9"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- mfr: string (nullable = true)\n",
+            " |-- type: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_filtered.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C2RsXagoHq7N",
+        "outputId": "fefef1fb-bd7a-4ced-d12f-a170d0fa13f3"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|                name|mfr|type|calories|protein|fat|sodium|fiber|carbo|sugars|potass|vitamins|shelf|weight|cups|   rating|\n",
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|   100% Natural Bran|  Q|   C|     120|      3|  5|    15|  2.0|  8.0|     8|   135|       0|    3|   1.0| 1.0|33.983679|\n",
+            "|      Almond Delight|  R|   C|     110|      2|  2|   200|  1.0| 14.0|     8|    -1|      25|    3|   1.0|0.75|34.384843|\n",
+            "|Apple Cinnamon Ch...|  G|   C|     110|      2|  2|   180|  1.5| 10.5|    10|    70|      25|    1|   1.0|0.75|29.509541|\n",
+            "|         Apple Jacks|  K|   C|     110|      2|  0|   125|  1.0| 11.0|    14|    30|      25|    2|   1.0| 1.0|33.174094|\n",
+            "|             Basic 4|  G|   C|     130|      3|  2|   210|  2.0| 18.0|     8|   100|      25|    3|  1.33|0.75|37.038562|\n",
+            "|        Cap'n'Crunch|  Q|   C|     120|      1|  2|   220|  0.0| 12.0|    12|    35|      25|    2|   1.0|0.75|18.042851|\n",
+            "|            Cheerios|  G|   C|     110|      6|  2|   290|  2.0| 17.0|     1|   105|      25|    1|   1.0|1.25|50.764999|\n",
+            "|Cinnamon Toast Cr...|  G|   C|     120|      1|  3|   210|  0.0| 13.0|     9|    45|      25|    2|   1.0|0.75|19.823573|\n",
+            "|            Clusters|  G|   C|     110|      3|  2|   140|  2.0| 13.0|     7|   105|      25|    3|   1.0| 0.5|40.400208|\n",
+            "|         Cocoa Puffs|  G|   C|     110|      1|  1|   180|  0.0| 12.0|    13|    55|      25|    2|   1.0| 1.0|22.736446|\n",
+            "|           Corn Chex|  R|   C|     110|      2|  0|   280|  0.0| 22.0|     3|    25|      25|    1|   1.0| 1.0|41.445019|\n",
+            "|           Corn Pops|  K|   C|     110|      1|  0|    90|  1.0| 13.0|    12|    20|      25|    2|   1.0| 1.0|35.782791|\n",
+            "|       Count Chocula|  G|   C|     110|      1|  1|   180|  0.0| 12.0|    13|    65|      25|    2|   1.0| 1.0|22.396513|\n",
+            "|  Cracklin' Oat Bran|  K|   C|     110|      3|  3|   140|  4.0| 10.0|     7|   160|      25|    3|   1.0| 0.5|40.448772|\n",
+            "|             Crispix|  K|   C|     110|      2|  0|   220|  1.0| 21.0|     3|    30|      25|    3|   1.0| 1.0|46.895644|\n",
+            "|         Froot Loops|  K|   C|     110|      2|  1|   125|  1.0| 11.0|    13|    30|      25|    2|   1.0| 1.0|32.207582|\n",
+            "|      Frosted Flakes|  K|   C|     110|      1|  0|   200|  1.0| 14.0|    11|    25|      25|    1|   1.0|0.75|31.435973|\n",
+            "|Fruit & Fibre Dat...|  P|   C|     120|      3|  2|   160|  5.0| 12.0|    10|   200|      25|    3|  1.25|0.67|40.917047|\n",
+            "|       Fruitful Bran|  K|   C|     120|      3|  0|   240|  5.0| 14.0|    12|   190|      25|    3|  1.33|0.67|41.015492|\n",
+            "|      Fruity Pebbles|  P|   C|     110|      1|  1|   135|  0.0| 13.0|    12|    25|      25|    2|   1.0|0.75|28.025765|\n",
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_new_column.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gal-U7iQHu6W",
+        "outputId": "7e9d6d32-88a4-42a6-ccc0-4cbaa5446b88"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- name: string (nullable = true)\n",
+            " |-- mfr: string (nullable = true)\n",
+            " |-- type: string (nullable = true)\n",
+            " |-- calories: integer (nullable = true)\n",
+            " |-- protein: integer (nullable = true)\n",
+            " |-- fat: integer (nullable = true)\n",
+            " |-- sodium: integer (nullable = true)\n",
+            " |-- fiber: double (nullable = true)\n",
+            " |-- carbo: double (nullable = true)\n",
+            " |-- sugars: integer (nullable = true)\n",
+            " |-- potass: integer (nullable = true)\n",
+            " |-- vitamins: integer (nullable = true)\n",
+            " |-- shelf: integer (nullable = true)\n",
+            " |-- weight: double (nullable = true)\n",
+            " |-- cups: double (nullable = true)\n",
+            " |-- rating: double (nullable = true)\n",
+            " |-- nova_coluna: integer (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_renamed_column.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1LFLheGNIBvp",
+        "outputId": "6c230b36-650f-4b34-bb76-5fd9bd66d13d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- name: string (nullable = true)\n",
+            " |-- mfr: string (nullable = true)\n",
+            " |-- type: string (nullable = true)\n",
+            " |-- calories: integer (nullable = true)\n",
+            " |-- protein: integer (nullable = true)\n",
+            " |-- fat: integer (nullable = true)\n",
+            " |-- sodium: integer (nullable = true)\n",
+            " |-- fiber: double (nullable = true)\n",
+            " |-- carbo: double (nullable = true)\n",
+            " |-- sugars: integer (nullable = true)\n",
+            " |-- potass: integer (nullable = true)\n",
+            " |-- vitamins: integer (nullable = true)\n",
+            " |-- shelf: integer (nullable = true)\n",
+            " |-- weight: double (nullable = true)\n",
+            " |-- cups: double (nullable = true)\n",
+            " |-- rating: double (nullable = true)\n",
+            " |-- double_fat: integer (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##14 Exemplos práticos de Ações"
+      ],
+      "metadata": {
+        "id": "1h8sJgZZJLbP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import col"
+      ],
+      "metadata": {
+        "id": "myvmC5i5JQKg"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark = SparkSession.builder     .appName(\"Exemplos PySpark\")     .getOrCreate()\n",
+        "\n",
+        "# Carregar dados de um arquivo CSV\n",
+        "df = spark.read.csv(\"/content/cereal.csv\", header=True, inferSchema=True)"
+      ],
+      "metadata": {
+        "id": "EJwkEJHjJRse"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Contar o número total de registros\n",
+        "count = df.count()\n",
+        "print(\"Número total de registros: \", count)\n",
+        "\n",
+        "# Exibir uma amostra dos dados\n",
+        "df_sample = df.sample(fraction=0.1, seed=42)\n",
+        "df_sample.show()\n",
+        "\n",
+        "# Calcular a média de uma coluna\n",
+        "average = df.select(\"calories\").groupBy().avg().collect()[0][0]\n",
+        "print(\"Média das calorias: \", average)\n",
+        "\n",
+        "# Salvar o DataFrame em um arquivo CSV\n",
+        "df.write.csv(\"/arquivo_teste.csv\", header=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-wFzOufJJamN",
+        "outputId": "f5992707-29a1-49c3-b725-2752357342bf"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número total de registros:  77\n",
+            "+-----------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|             name|mfr|type|calories|protein|fat|sodium|fiber|carbo|sugars|potass|vitamins|shelf|weight|cups|   rating|\n",
+            "+-----------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|          Basic 4|  G|   C|     130|      3|  2|   210|  2.0| 18.0|     8|   100|      25|    3|  1.33|0.75|37.038562|\n",
+            "|      Corn Flakes|  K|   C|     100|      2|  0|   290|  1.0| 21.0|     2|    35|      25|    1|   1.0| 1.0|45.863324|\n",
+            "|    Count Chocula|  G|   C|     110|      1|  1|   180|  0.0| 12.0|    13|    65|      25|    2|   1.0| 1.0|22.396513|\n",
+            "|Nutri-grain Wheat|  K|   C|      90|      3|  0|   170|  3.0| 18.0|     2|    90|      25|    3|   1.0| 1.0|59.642837|\n",
+            "|      Raisin Bran|  K|   C|     120|      3|  1|   210|  5.0| 14.0|    12|   240|      25|    2|  1.33|0.75|39.259197|\n",
+            "|   Shredded Wheat|  N|   C|      80|      2|  0|     0|  3.0| 16.0|     0|    95|       0|    1|  0.83| 1.0|68.235885|\n",
+            "|           Smacks|  K|   C|     110|      2|  1|    70|  1.0|  9.0|    15|    40|      25|    2|   1.0|0.75|31.230054|\n",
+            "|          Triples|  G|   C|     110|      2|  1|   250|  0.0| 21.0|     3|    60|      25|    3|   1.0|0.75|39.106174|\n",
+            "+-----------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "\n",
+            "Média das calorias:  106.88311688311688\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1 = spark.read.csv(\"/arquivo_teste.csv\", sep = \",\", inferSchema = True, header = True)\n",
+        "df1.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EYkRcOkdJwuh",
+        "outputId": "9e22ae9e-3f1a-444a-dd45-57005ba92f48"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|                name|mfr|type|calories|protein|fat|sodium|fiber|carbo|sugars|potass|vitamins|shelf|weight|cups|   rating|\n",
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "|           100% Bran|  N|   C|      70|      4|  1|   130| 10.0|  5.0|     6|   280|      25|    3|   1.0|0.33|68.402973|\n",
+            "|   100% Natural Bran|  Q|   C|     120|      3|  5|    15|  2.0|  8.0|     8|   135|       0|    3|   1.0| 1.0|33.983679|\n",
+            "|            All-Bran|  K|   C|      70|      4|  1|   260|  9.0|  7.0|     5|   320|      25|    3|   1.0|0.33|59.425505|\n",
+            "|All-Bran with Ext...|  K|   C|      50|      4|  0|   140| 14.0|  8.0|     0|   330|      25|    3|   1.0| 0.5|93.704912|\n",
+            "|      Almond Delight|  R|   C|     110|      2|  2|   200|  1.0| 14.0|     8|    -1|      25|    3|   1.0|0.75|34.384843|\n",
+            "|Apple Cinnamon Ch...|  G|   C|     110|      2|  2|   180|  1.5| 10.5|    10|    70|      25|    1|   1.0|0.75|29.509541|\n",
+            "|         Apple Jacks|  K|   C|     110|      2|  0|   125|  1.0| 11.0|    14|    30|      25|    2|   1.0| 1.0|33.174094|\n",
+            "|             Basic 4|  G|   C|     130|      3|  2|   210|  2.0| 18.0|     8|   100|      25|    3|  1.33|0.75|37.038562|\n",
+            "|           Bran Chex|  R|   C|      90|      2|  1|   200|  4.0| 15.0|     6|   125|      25|    1|   1.0|0.67|49.120253|\n",
+            "|         Bran Flakes|  P|   C|      90|      3|  0|   210|  5.0| 13.0|     5|   190|      25|    3|   1.0|0.67|53.313813|\n",
+            "|        Cap'n'Crunch|  Q|   C|     120|      1|  2|   220|  0.0| 12.0|    12|    35|      25|    2|   1.0|0.75|18.042851|\n",
+            "|            Cheerios|  G|   C|     110|      6|  2|   290|  2.0| 17.0|     1|   105|      25|    1|   1.0|1.25|50.764999|\n",
+            "|Cinnamon Toast Cr...|  G|   C|     120|      1|  3|   210|  0.0| 13.0|     9|    45|      25|    2|   1.0|0.75|19.823573|\n",
+            "|            Clusters|  G|   C|     110|      3|  2|   140|  2.0| 13.0|     7|   105|      25|    3|   1.0| 0.5|40.400208|\n",
+            "|         Cocoa Puffs|  G|   C|     110|      1|  1|   180|  0.0| 12.0|    13|    55|      25|    2|   1.0| 1.0|22.736446|\n",
+            "|           Corn Chex|  R|   C|     110|      2|  0|   280|  0.0| 22.0|     3|    25|      25|    1|   1.0| 1.0|41.445019|\n",
+            "|         Corn Flakes|  K|   C|     100|      2|  0|   290|  1.0| 21.0|     2|    35|      25|    1|   1.0| 1.0|45.863324|\n",
+            "|           Corn Pops|  K|   C|     110|      1|  0|    90|  1.0| 13.0|    12|    20|      25|    2|   1.0| 1.0|35.782791|\n",
+            "|       Count Chocula|  G|   C|     110|      1|  1|   180|  0.0| 12.0|    13|    65|      25|    2|   1.0| 1.0|22.396513|\n",
+            "|  Cracklin' Oat Bran|  K|   C|     110|      3|  3|   140|  4.0| 10.0|     7|   160|      25|    3|   1.0| 0.5|40.448772|\n",
+            "+--------------------+---+----+--------+-------+---+------+-----+-----+------+------+--------+-----+------+----+---------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "91pm_UJTE4Eu"
+        "id": "K9ncXyrWJ2q-"
       },
       "execution_count": null,
       "outputs": []
