--- a/RDD e DataFrame/Op_entre_Data_Frames_e_Armazenamento.ipynb
+++ b/RDD e DataFrame/Op_entre_Data_Frames_e_Armazenamento.ipynb
@@ -712,13 +712,227 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Na Prátrica como é o Apache *Spark*"
+      ],
+      "metadata": {
+        "id": "bEPMbdZ_RjDu"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "\n",
+        "spark = SparkSession.builder.appName('Tutorial').getOrCreate()\n",
+        "\n",
+        "dept = [(\"Finance\",10),(\"Marketing\",20),(\"Sales\",30),(\"IT\",40)]\n",
+        "rdd = spark.sparkContext.parallelize(dept)"
+      ],
       "metadata": {
         "id": "Dfe1G-prOjaW"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = rdd.toDF()\n",
+        "df.printSchema()\n",
+        "df.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gV9NvrTZR1kF",
+        "outputId": "e250a5f5-06fa-4495-e74d-cf07da430070"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- _1: string (nullable = true)\n",
+            " |-- _2: long (nullable = true)\n",
+            "\n",
+            "+---------+---+\n",
+            "|_1       |_2 |\n",
+            "+---------+---+\n",
+            "|Finance  |10 |\n",
+            "|Marketing|20 |\n",
+            "|Sales    |30 |\n",
+            "|IT       |40 |\n",
+            "+---------+---+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deptColumns = [\"dept_name\",\"dept_id\"]\n",
+        "df2 = rdd.toDF(deptColumns)\n",
+        "df2.printSchema()\n",
+        "df2.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eR-iFZTtR7c2",
+        "outputId": "5f1e6722-4f4e-4dfc-b055-a940ff5b2fd6"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- dept_name: string (nullable = true)\n",
+            " |-- dept_id: long (nullable = true)\n",
+            "\n",
+            "+---------+-------+\n",
+            "|dept_name|dept_id|\n",
+            "+---------+-------+\n",
+            "|Finance  |10     |\n",
+            "|Marketing|20     |\n",
+            "|Sales    |30     |\n",
+            "|IT       |40     |\n",
+            "+---------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deptDF = spark.createDataFrame(rdd, schema = deptColumns)\n",
+        "deptDF.printSchema()\n",
+        "deptDF.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RHS0uNaVSFkm",
+        "outputId": "71d86a6e-fb6b-4ec6-9db1-5e7ce2254b92"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- dept_name: string (nullable = true)\n",
+            " |-- dept_id: long (nullable = true)\n",
+            "\n",
+            "+---------+-------+\n",
+            "|dept_name|dept_id|\n",
+            "+---------+-------+\n",
+            "|Finance  |10     |\n",
+            "|Marketing|20     |\n",
+            "|Sales    |30     |\n",
+            "|IT       |40     |\n",
+            "+---------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.types import StructType,StructField, StringType\n",
+        "deptSchema = StructType([\n",
+        "    StructField('dept_name', StringType(), True),\n",
+        "    StructField('dept_id', StringType(), True)\n",
+        "])\n",
+        "\n",
+        "deptDF1 = spark.createDataFrame(rdd, schema = deptSchema)\n",
+        "deptDF1.printSchema()\n",
+        "deptDF1.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tk2ABZNFSLoM",
+        "outputId": "8c788a20-8331-4c0a-8f76-db42f3b2bf32"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- dept_name: string (nullable = true)\n",
+            " |-- dept_id: string (nullable = true)\n",
+            "\n",
+            "+---------+-------+\n",
+            "|dept_name|dept_id|\n",
+            "+---------+-------+\n",
+            "|Finance  |10     |\n",
+            "|Marketing|20     |\n",
+            "|Sales    |30     |\n",
+            "|IT       |40     |\n",
+            "+---------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.types import StructType,StructField, StringType\n",
+        "deptSchema = StructType([\n",
+        "    StructField('dept_name', StringType(), True),\n",
+        "    StructField('dept_id', StringType(), True)\n",
+        "])\n",
+        "\n",
+        "deptDF1 = spark.createDataFrame(rdd, schema = deptSchema)\n",
+        "deptDF1.printSchema()\n",
+        "deptDF1.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rrdV4FyiSVNP",
+        "outputId": "f63e3690-db88-4234-e166-2a9831dd4326"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- dept_name: string (nullable = true)\n",
+            " |-- dept_id: string (nullable = true)\n",
+            "\n",
+            "+---------+-------+\n",
+            "|dept_name|dept_id|\n",
+            "+---------+-------+\n",
+            "|Finance  |10     |\n",
+            "|Marketing|20     |\n",
+            "|Sales    |30     |\n",
+            "|IT       |40     |\n",
+            "+---------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
